compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__discard_3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 668
expression: "\npub type Thing {\n  Thing(a: Bool, b: Bool)\n}\n\npub fn main(x) {\n  case x {\n    Thing(a: False, ..) -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Thing {
  Thing(a: Bool, b: Bool)
}

pub fn main(x) {
  case x {
    Thing(a: False, ..) -> 1
  }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:7:3
  │  
7 │ ╭   case x {
8 │ │     Thing(a: False, ..) -> 1
9 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Thing(a: True, b:)
