compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__duplicated_pattern_in_alternative.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1786
expression: "\npub fn main() {\n  let x = 1\n  case x {\n    2 -> x\n    1 | 2 -> x - 4\n    _ -> panic\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let x = 1
  case x {
    2 -> x
    1 | 2 -> x - 4
    _ -> panic
  }
}


----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:6:9
  │
6 │     1 | 2 -> x - 4
  │         ^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.
