compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__empty_case_of_external.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1049
expression: "\npub type Thingy\n\npub fn main(x: Thingy) {\n  case x {\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Thingy

pub fn main(x: Thingy) {
  case x {
  }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:5:3
  │  
5 │ ╭   case x {
6 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _
